--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     /* End Global Rules */
     /* Start Landing */
     .landing {
-      background-image: url("D:\test-projects\clipboard-landing-page-master\images\bg-header-desktop.png");
+      background-image: url(".\images\bg-header-desktop.png");
       height: 100vh;
       background-size: cover;
       background-repeat: no-repeat;
@@ -424,7 +424,7 @@
   <!-- Start Landing -->
   <div class="landing">
     <div class="logo">
-      <img src="/images/logo.svg" alt="">
+      <img src="./images/logo.svg" alt="">
     </div>
     <h1> A history of everything you copy</h1>
     <p>Clipboard allows you to track and organize everything you
@@ -444,7 +444,7 @@
         devices. Our Mac and iOS apps will help you organize everything.</p>
     </div>
     <div class="b-b-c">
-      <img src="/images/image-computer.png" alt="">
+      <img src="./images/image-computer.png" alt="">
       <ul>
         <li>
           <h3> Quick Search
@@ -475,7 +475,7 @@
       <p>Whether you’re on the go, or at your computer, you can access all your Clipboard<br>
         snippets in a few simple clicks.</p>
     </div>
-    <img src="/images/image-devices.png" alt="">
+    <img src="./images/image-devices.png" alt="">
   </div>
   <!-- End sec-c -->
   <!-- Start sec-d -->
@@ -486,7 +486,7 @@
     </div>
     <div class="container">
       <div class="box">
-        <img src="/images/icon-blacklist.svg" alt="">
+        <img src="./images/icon-blacklist.svg" alt="">
         <div class="content">
           <h3>Create blacklists</h3>
           <p>
@@ -495,7 +495,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images/icon-text.svg" alt="">
+        <img src="./images/icon-text.svg" alt="">
         <div class="content">
           <h3>Plain text snippets</h3>
           <p>
@@ -504,7 +504,7 @@
         </div>
       </div>
       <div class="box">
-        <img src="/images//icon-preview.svg" alt="">
+        <img src="./images//icon-preview.svg" alt="">
         <div class="content">
           <h3>Sneak preview</h3>
           <p>
@@ -518,11 +518,11 @@
   <!-- Start sec-e -->
   <div class="sec-e">
     <div class="container">
-      <img src="/images/logo-google.png" alt="">
-      <img src="/images/logo-ibm.png" alt="">
-      <img src="/images/logo-microsoft.png" alt="">
-      <img src="/images/logo-hp.png" alt="">
-      <img src="/images/logo-vector-graphics.png" alt="">
+      <img src="./images/logo-google.png" alt="">
+      <img src="./images/logo-ibm.png" alt="">
+      <img src="./images/logo-microsoft.png" alt="">
+      <img src="./images/logo-hp.png" alt="">
+      <img src="./images/logo-vector-graphics.png" alt="">
     </div>
   </div>
   <!-- End sec-e -->
@@ -545,7 +545,7 @@
   <div class="footer">
     <div class="container">
       <div class="left-content">
-        <img src="/images/logo.svg" alt="" class="logo">
+        <img src="./images/logo.svg" alt="" class="logo">
         <div class="f-links">
           <ul>
             <li>FAQs</li>
