--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     /* End Global Rules */
     /* Start Landing */
     .landing {
-      background-image: url(".\images\bg-header-desktop.png");
+      background-image: url("./images/bg-header-desktop.png");
       height: 100vh;
       background-size: cover;
       background-repeat: no-repeat;
