--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <!-- viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Main Css File -->
-  <link rel="stylesheet" href="/css/main.css">
   <!-- Fontwesome library -->
-  <link rel="stylesheet" href="/css/all.min.css">
+  <link rel="stylesheet" href="./css/all.min.css">
   <!-- Page Title -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Elsayed Kewan | landing page</title>
